Revert "fix(client): align block labels on mobile view"
This reverts commit 7a5ec7ff34763f0f9576a474d32e8e13c27ed3a9.

--- a/client/src/templates/Introduction/intro.css
+++ b/client/src/templates/Introduction/intro.css
@@ -396,11 +396,6 @@ a.map-grid-item.challenge-completed {
   .map-challenge-title {
     font-size: 1rem;
   }
-
-  .block-label {
-    margin-inline-start: auto;
-    margin-inline-end: 10px;
-  }
 }
 
 @media screen and (max-width: 767px) {
